<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="#99CCFF"
    tools:context=".MainActivity"
    android:foregroundGravity="center_horizontal">


    <RelativeLayout
        android:id="@id/relativeView1"
        android:layout_width="wrap_content"
        android:layout_height="380.0dip"
         >
        <FrameLayout
            android:id="@+id/ad_container"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginTop="50dp"/>

        <Spinner
            android:id="@id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textView1"
            android:layout_marginTop="15.0dip" />

        <Spinner
            android:id="@id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/spinner2"
            android:layout_marginTop="15.0dip" />

        <AutoCompleteTextView
            android:id="@id/autoCompleteTextView1"
            android:layout_width="220.0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/spinner1"
            android:layout_marginTop="14.0dip"
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/hrana"
            android:imeOptions="actionNext"
            android:lines="2" >

            <requestFocus />
        </AutoCompleteTextView>

        <LinearLayout
            android:id="@id/LinLayouttx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/autoCompleteTextView1"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@id/textViewmulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:text="@string/multiply"
                android:textAppearance="?android:textAppearanceSmall" />

            <EditText
                android:id="@id/editText1"
                android:layout_width="80.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:ems="10"
                android:hint="@string/gr"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />



            <TextView
                android:id="@id/textVieweq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:text="@string/eq"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@id/textViewtochki"
                android:layout_width="150.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:text="@string/tochki"
                android:textAppearance="?android:textAppearanceLarge" />
        </LinearLayout>


        <LinearLayout
                android:id="@+id/LinLayoutButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/LinLayouttx"
                android:layout_marginTop="40.0dip"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_cancel"
                android:layout_marginRight="100dp"
                />

        <Button
            android:id="@id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_save"
            />

            </LinearLayout>


    </RelativeLayout>

</ScrollView>